# otus-cpp-gw

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.run  Doxyfile  LICENSE  Makefile  README.md  client.cpp  conanfile.txt  main.cpp  message_service.service
.github/workflows/: release.yml
include/: chat_service.hpp
proto/: CMakeLists.txt  chat_messages.proto
src/: chat_network.cpp  chat_network.hpp  chat_packet.cpp  chat_packet.hpp  chat_participant.hpp  chat_room.cpp  chat_room.hpp  chat_server.cpp  chat_server.hpp  chat_service.cpp  chat_session.cpp  chat_session.hpp  data_base.hpp  i_chat_network.hpp  user_info.hpp  user_service.cpp  user_service.hpp
test/: CMakeLists.txt  test_chat_pcaket.cpp  test_chat_room.cpp  test_chat_server.cpp  test_chat_session.cpp  test_hello.cpp  test_user_service.cpp
